Remove "not empty" constraint from RepeatStrategy* constructors.